# rustwerk

./: .gitattributes  .gitignore  .template-sync.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  llms.txt
.claude/commands/: commit.md  next-task.md  template-sync.md  todo.md  validate.md
.claude/hooks/: stop-check.sh
.claude/skills/rustwerk/: SKILL.md
.claude/skills/tui-expert/: SKILL.md
.github/workflows/: ci.yml  release.yml
.rustwerk/: project.json
.rustwerk/tasks/: PLG-API-STATE.md  PLG-API.md  PLG-CLI.md  PLG-HOST-E2E.md  PLG-HOST.md  PLG-INSTALL-BUILD.md  PLG-INSTALL.md  PLG-JIRA-E2E.md  PLG-JIRA-FIELDS.md  PLG-JIRA-ISSUETYPE.md  PLG-JIRA-PARENT.md  PLG-JIRA-STATE.md  PLG-JIRA-UPDATE.md  PLG-JIRA.md  PLG-MAP.md  PLG-WORKSPACE.md
crates/rustwerk/: Cargo.toml
crates/rustwerk-jira-plugin/: Cargo.toml
crates/rustwerk-jira-plugin/src/: config.rs  jira_client.rs  lib.rs  mapping.rs  push.rs  test_support.rs  transition.rs  warnings.rs
crates/rustwerk-jira-plugin/tests/: jira_live.rs
crates/rustwerk-plugin-api/: Cargo.toml
crates/rustwerk-plugin-api/src/: lib.rs
crates/rustwerk/src/: lib.rs
crates/rustwerk/src/ai/: mod.rs  wbs_schema.rs
crates/rustwerk/src/domain/: developer.rs  error.rs  mod.rs  project.rs  task.rs
crates/rustwerk/src/domain/project/: bottleneck.rs  critical_path.rs  gantt_row.rs  gantt_schedule.rs  mod.rs  parent.rs  queries.rs  scheduling.rs  summary.rs  tree.rs  tree_node.rs
crates/rustwerk/src/persistence/: file_store.rs  mod.rs
crates/rustwerk/tests/: cli_integration.rs
docs/: manual.md  project-file-spec.md
docs/developer/: DIARY.md  artisan-log.md  artisan-resolved.md  diary-guidelines.md  redteam-log.md  redteam-resolved.md  template-feedback.md
docs/guides/: jira-workflow.md
docs/planning/: wbs.md
docs/research/: gantt-rendering.md
knowledge/: _index.md
knowledge/architecture/: _index.md  cli-layer.md  crate-jira-plugin.md  crate-plugin-api.md  crate-rustwerk.md  domain-layer.md  persistence-layer.md  plugin-host.md  workspace.md  xtask.md
knowledge/concepts/: _index.md  cdylib.md  critical-path.md  dependencies.md  developer.md  effort.md  ffi.md  gantt.md  task.md  wbs.md
knowledge/decisions/: _index.md  ffi-plugin-boundary.md  git-native-json-store.md  json-io-agent-friendly.md  single-portable-binary.md  xtask-build-wrapper.md
knowledge/integrations/: _index.md  jira-field-mapping.md  jira-parent-epic.md  jira-plugin.md  rustbase-template.md
scripts/: install.ps1  install.sh
tools/kg/: README.md
tools/kg/scripts/: _lib.sh  kg-build.ps1  kg-build.sh  kg-new.sh  kg-serve.ps1  kg-serve.sh  kg-stats.sh  kg-validate.sh
tools/kg/site/: .gitignore  config.toml
tools/kg/site/sass/: main.scss
tools/kg/site/templates/: base.html  index.html  page.html  search.html  section.html  taxonomy_list.html  taxonomy_single.html
xtask/: Cargo.toml
xtask/src/: kg.rs  main.rs
