[workspace]
members = ["crates/rustwerk", "crates/rustwerk-plugin-api", "xtask"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"
multiple_crate_versions = "allow"
# Pedantic lints we accept — these require extensive doc
# changes without catching real bugs.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Module-level wildcard re-exports are idiomatic for our
# domain layer.
module_name_repetitions = "allow"
wildcard_imports = "allow"
# Numeric casts are pervasive in TUI/display code where
# values are bounded by terminal dimensions.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

[profile.test]
opt-level = 1
