[package]
name = "rustwerk-jira-plugin"
version = "0.1.0"
edition = "2021"
description = "Jira integration plugin for rustwerk (cdylib)"
license = "MIT"
repository = "https://github.com/breki/rustwerk"
readme = "../../README.md"
keywords = ["rustwerk", "plugin", "jira"]
categories = ["command-line-utilities"]
publish = false

[lib]
# `rlib` is added alongside `cdylib` so integration tests
# under `tests/` (e.g. PLG-JIRA-E2E's live smoke test) can
# link against the plugin and call the FFI entry points as
# plain Rust functions. The host still loads the `.dll` /
# `.so` / `.dylib` at runtime via libloading — nothing
# about the plugin-discovery contract changes.
crate-type = ["cdylib", "rlib"]

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rustwerk-plugin-api = { path = "../rustwerk-plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
url = "2"
