[package]
name = "rustwerk-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Shared DTOs and FFI contract between rustwerk host and plugin libraries"
license = "MIT"
repository = "https://github.com/breki/rustwerk"
readme = "../../README.md"
keywords = ["rustwerk", "plugin", "ffi"]
categories = ["api-bindings"]
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2"
