[package]
name = "rustwerk"
version = "0.28.0"
edition = "2021"
description = "Git-native, AI-agent-friendly project orchestration CLI"
license = "MIT"
repository = "https://github.com/breki/rustwerk"
readme = "../../README.md"
default-run = "rustwerk"
keywords = ["project-management", "wbs", "cli", "git-native"]
categories = ["command-line-utilities"]

[lints.rust]
warnings = "deny"

[lints.clippy]
perf = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"
multiple_crate_versions = "allow"

[[bin]]
name = "rustwerk"
path = "src/bin/rustwerk/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
thiserror = "2"
