[package]
name = "rustwerk"
version = "0.41.0"
edition = "2021"
description = "Git-native, AI-agent-friendly project orchestration CLI"
license = "MIT"
repository = "https://github.com/breki/rustwerk"
readme = "../../README.md"
default-run = "rustwerk"
keywords = ["project-management", "wbs", "cli", "git-native"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "rustwerk"
path = "src/bin/rustwerk/main.rs"

[features]
default = ["plugins"]
plugins = ["dep:libloading"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
libloading = { version = "0.8", optional = true }
rustwerk-plugin-api = { path = "../rustwerk-plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
thiserror = "2"
